<resources>
    <!-- Switch On/Off  -->
    <string name="switch_on_text">On</string>
    <string name="switch_off_text">Off</string>

    <string name="common_menu_title_batch_select">Batch select</string>
    <string name="common_menu_title_select_all">All yes</string>
    <string name="common_menu_title_un_select_all">All no</string>
    <string name="common_menu_title_search">search</string>
    <string name="common_menu_title_rename">Rename</string>
    <string name="common_menu_title_remove">Remove</string>
    <string name="common_menu_title_uninstall">Uninstall</string>
    <string name="common_menu_title_wiki">Wiki</string>
    <string name="common_menu_title_import_from_clipboard">Import from clipboard</string>
    <string name="common_menu_title_import">Import</string>
    <string name="common_menu_title_re_import">Re-Import</string>
    <string name="common_menu_title_update">Update</string>
    <string name="common_menu_title_export_to_clipboard">Export to clipboard</string>
    <string name="common_fab_title_done">Done</string>
    <string name="common_fab_title_add">Add</string>
    <string name="common_dialog_message_are_you_sure">Are you sure? Take care!</string>

    <string name="common_retry">Retry</string>
    <string name="common_remember">Got</string>
    <string name="common_tips">Tips</string>
    <string name="common_tips_qut">Tips:</string>

    <string name="common_badge_text_experiment">EXP</string>
    <string name="common_experiment_feature_warning_message">This feature is an experimental feature and is not yet stable. It is recommended that you back up your data before enabling this feature to prevent data loss due to unexpected bugs.</string>

    <string name="common_toast_copied_to_clipboard">Copied to clipboard</string>

    <string name="app_state_disabled">Disabled</string>

    <string name="chip_title_app_only_disabled">Disabled</string>
    <string name="chip_title_app_only_enable">Enabled</string>
    <string name="chip_title_app_only_running">Running</string>
    <string name="chip_title_app_only_cloned_app">Cloned</string>

    <string name="app_picker_title">Pick app</string>

    <string name="common_text_value_not_set">Not set</string>

    <string name="common_network_error">Network unavailable, Please check your internet connection.</string>
    <string name="common_server_error">Server error, Please try again later.</string>
    <string name="common_generic_error">Oops. Something went wrong</string>

    <string name="common_text_wait_a_moment">Wait a moment</string>

    <string name="common_darg_sort">Drag to sort</string>
    <string name="common_sort_reverse">Reverse</string>
    <string name="common_sort_by_default">Default</string>
    <string name="common_sort_by_install_time">Install time</string>
    <string name="common_sort_by_update_time">Update time</string>
    <string name="common_sort_by_last_used_time">Last used time</string>
    <string name="common_sort_by_total_used_time">Total use time</string>
    <string name="common_sort_by_install_app_label">App label</string>
    <string name="common_sort_by_install_sdk_version">Target SDK</string>
    <string name="common_sort_by_install_apk_size">Apk size</string>
    <string name="common_sort_by_install_app_uid">UID</string>

    <string name="common_switchbar_title_format">Use \"%s\"</string>
    <string name="module_common_title_tools">Tools</string>

    <string name="module_common_error_occur">Error occur</string>
    <string name="module_common_copy_error_message">Copy error</string>

    <string name="module_common_no_data">No data</string>

    <string name="module_common_user">User %s</string>
</resources>
