<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="github.tornaco.android.thanos.common.CommonFuncToggleAppListFilterViewModel" />

    </data>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_alignParentTop="true"
            android:background="?colorPrimary"
            android:fitsSystemWindows="false"
            android:theme="?appbarTheme"
            app:elevation="@dimen/common_toolbar_elevation">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:collapsedTitleTextAppearance="@style/ToolbarCollapsedTitleTextAppearance"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleTextAppearance="@style/ToolbarExpandedTitleTextAppearance"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:titleCollapseMode="scale"
                app:toolbarId="@+id/toolbar">

                <FrameLayout
                    android:id="@+id/toolbar_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_collapseMode="pin">

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?actionBarSize"
                        app:popupTheme="?appbarPopupTheme"
                        app:theme="?toolbarTheme"
                        app:titleTextAppearance="@style/ToolbarCollapsedTitleTextAppearance"
                        app:titleTextColor="?menuIconTint"
                        tools:title="Title of Toolbar">

                    </androidx.appcompat.widget.Toolbar>


                    <com.miguelcatalan.materialsearchview.MaterialSearchView
                        android:id="@+id/search_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </FrameLayout>


            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/chip_container"
                android:background="?cardsBackgroundColor"
                android:orientation="vertical">

                <include
                    android:id="@+id/switch_bar_container"
                    layout="@layout/module_common_switchbar_container" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="?actionBarSize"
                    android:enabled="@{!viewModel.isDataLoading}"
                    android:visibility="gone" />

                <include
                    android:id="@+id/feature_desc_container"
                    layout="@layout/common_feature_description_bar_layout" />


                <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                    android:id="@+id/swipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:refreshing="@{viewModel.isDataLoading}">

                    <com.simplecityapps.recyclerview_fastscroll.views.FastScrollRecyclerView
                        android:id="@+id/apps"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?cardsBackgroundColor"
                        android:clipChildren="true"
                        android:clipToPadding="true"
                        android:listModels="@{viewModel.listModels}" />

                </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
            </LinearLayout>


            <RelativeLayout
                android:id="@+id/chip_container"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_alignParentBottom="true"
                android:background="?colorPrimary">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip1"
                        style="@style/FilterChipTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:checked="true"
                        tools:text="@string/chip_title_app_only_disabled" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip2"
                        style="@style/FilterChipTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:checked="true"
                        tools:text="@string/chip_title_app_only_enable" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip3"
                        style="@style/FilterChipTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:checked="true"
                        tools:text="@string/chip_title_app_only_running" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip4"
                        style="@style/FilterChipTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/chip_title_app_only_cloned_app" />

                </com.google.android.material.chip.ChipGroup>
            </RelativeLayout>

        </RelativeLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>